--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "",
   "scripts": {
     "build": "webpack --mode=development",
-    "start": "webpack-dev-server --mode=development",
+    "start": "webpack-dev-server --mode=development --open",
     "bundle": "npm install && npm run watch",
     "production": "cross-env NODE_ENV=production webpack --mode=production",
     "lint-sass": "sass-lint -v -q --format=compact",
