--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "autoprefixer": "^9.5.1",
     "gsap": "^2.1.2",
+    "pixi-filters": "^3.0.3",
+    "pixi.js": "^5.0.3",
     "pubsub-js": "^1.7.0",
     "slick-carousel": "^1.8.1"
   },
