--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "autoprefixer": "^9.5.1",
+    "glslify-loader": "^2.0.0",
     "gsap": "^2.1.2",
     "pixi-filters": "^3.0.3",
     "pixi.js": "^5.0.4",
     "pubsub-js": "^1.7.0",
+    "shader-loader": "^1.3.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
